BUG: 95407

Fix deleted session shortcuts are remembered.

svn path=/trunk/kdebase/konsole/; revision=371960